# tunnara

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .npmrc  ARTIFACT_MANIFEST.md  ARTIFACT_MANIFEST.md.bak  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITHUB_UPLOAD.md  GITHUB_UPLOAD.md.bak  LICENSE-NOTICE.md  Makefile  PROJECT_TREE.txt  PULL_REQUEST.md  README.md  SECURITY.md  VALIDATION_REPORT.md  docker-compose.example.yml  docker.env.example  docker.sh  package-lock.json  package.json  release.config.mjs
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/releases/: initial-release-notes.md
.github/workflows/: artifact-cleanup.yml  ci.yml  codeql.yml  desktop-release.yml  docker-publish.yml  mobile-release.yml  mobile.yml  native-preview.yml  nightly-hardening.yml  release.yml  runtime-release.yml  sdk-build.yml  storage-matrix.yml  version-after-merge.yml
apps/console/: .env.example  .env.model  .npmrc  CHANGELOG.md  Dockerfile  README.md  README_TUNNARA.md  app.manifest.example.json  build-windows.bat  index.html  package-lock.json  package.json  release.config.mjs  rustfmt.toml  tsconfig.json  vite.config.ts
apps/console/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/console/src-tauri/capabilities/: default.json
apps/console/src-tauri/generic-license-tauri/: .env.example  Cargo.toml  README.md
apps/console/src-tauri/generic-license-tauri/examples/with-login/: .env.example  frontend-login.ts  src-tauri-main.rs
apps/console/src-tauri/generic-license-tauri/examples/without-login/: frontend-startup.ts
apps/console/src-tauri/generic-license-tauri/src/: cache.rs  client.rs  commands.rs  device.rs  error.rs  lib.rs  models.rs  registration.rs  service.rs
apps/console/src-tauri/icons/: icon.icns
apps/console/src-tauri/src/: app_state.rs  db.rs  lib.rs  main.rs  migrations.rs  models.rs  net_bind.rs  runtime_config.rs  security.rs
apps/console/src-tauri/src/cli/: args.rs  runner.rs
apps/console/src-tauri/src/commands/: access.rs  app.rs  auth.rs  companies.rs  entities.rs  integrations.rs  licensing.rs  runtime.rs  support.rs  webhook.rs  websocket.rs
apps/console/src-tauri/src/core/: mod.rs
apps/console/src-tauri/src/core/database/: config.rs  connection.rs  firebird.rs  health.rs  migrations.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
apps/console/src-tauri/src/core/database/provider/: mod.rs  types.rs
apps/console/src-tauri/src/integrations/: mod.rs  registry.rs
apps/console/src-tauri/src/internal_api/: app_commands.rs  config.rs  docs.rs  mod.rs  routes.rs  server.rs  state.rs  web_app.rs  web_server.rs
apps/console/src-tauri/src/native_webhook/: config.rs  routes.rs  server.rs
apps/console/src-tauri/src/native_websocket/: config.rs  hub.rs  mod.rs  server.rs
apps/console/src-tauri/src/service/: linux_service.rs  mod.rs  service_runner.rs  windows_service.rs
apps/control-api/: .dockerignore  .env.example  Dockerfile  artisan  composer.json  phpunit.xml
crates/tunnara-agent-core/: Cargo.toml
crates/tunnara-agent-core/src/: lib.rs
crates/tunnara-config/: Cargo.toml
crates/tunnara-protocol/: Cargo.toml
crates/tunnara-quic/: Cargo.toml  README.md
crates/tunnara-sdk-c/: Cargo.toml
crates/tunnara-transport/: Cargo.toml
crates/tunnara-types/: Cargo.toml
deploy/cloudpanel/: README.md  install-v0.2.sh  install.sh  nginx-console.conf  nginx-edge.conf
deploy/docker/: .env.example  Dockerfile.rust-service  README.md  bootstrap.sh  docker-compose.build.yml  docker-compose.cloudflare.build.yml  docker-compose.cloudflare.yml  docker-compose.distributed.quic.yml  docker-compose.distributed.yml  docker-compose.ha.build.yml  docker-compose.ha.yml  docker-compose.infrastructure.yml  docker-compose.observability.yml  docker-compose.quic.build.yml  docker-compose.quic.yml  docker-compose.yml  install-from-github.sh  tunnara.sh
deploy/observability/: README.md  prometheus.yml
deploy/systemd/: quic-client.env.example  quic-server.env.example  tunnara-agent.service  tunnara-quic-client.service  tunnara-quic-server.service
docs/: ROADMAP.md  STATUS.md  TEMPLATE_PORTING.md
docs/adr/: 0001-monorepo.md  0002-control-data-plane.md  0003-ui-template-preservation.md
docs/api/: openapi-v1.0.0.yaml  openapi-v2.0.0-rc1.yaml  openapi-v2.0.0-rc2.yaml  openapi-v2.0.0-rc3.yaml  openapi-v2.0.0-rc4.yaml  openapi-v2.0.0-rc5.yaml  openapi-v2.0.0-rc6.yaml
docs/architecture/: ARCHITECTURE.md  COMPETITIVE_GAP.md
docs/branding/: README.md
docs/github/: REPOSITORY_SETUP.md
docs/mobile/: BUILD_AND_DISTRIBUTION.md
docs/operations/: CI_STORAGE_FIX.md  DISASTER_RECOVERY.md  DOCKER_DEPLOYMENT.md  GITHUB_ACTIONS.md  INCIDENT_RESPONSE.md  KUBERNETES.md  LEGACY_ASSET_AUDIT.md  OBSERVABILITY.md  POST_MERGE_RELEASE.md  PRODUCTION.md  PRODUCTION_READINESS.md  QUIC.md  QUICKSTART.md  RELEASE_PROCESS.md  STORAGE_PROVIDERS.md  UPGRADE_ROLLBACK.md  VPS_DOCKER_QUICKSTART.md
docs/protocol/: CONTROL_PROTOCOL_V0_1.md  DATA_PROTOCOL_V1.md
docs/releases/: PULL_REQUEST_v2.0.0-rc.1.md  PULL_REQUEST_v2.0.0-rc.2.md  PULL_REQUEST_v2.0.0-rc.3.md  PULL_REQUEST_v2.0.0-rc.4.md  PULL_REQUEST_v2.0.0-rc.5.md  PULL_REQUEST_v2.0.0-rc.6.md  PULL_REQUEST_v2.0.0-rc.7.md  PULL_REQUEST_v2.0.0-rc.8.md  v1.1.0.md  v1.1.2.md  v1.1.3.md  v2.0.0-rc.1.md  v2.0.0-rc.2.md  v2.0.0-rc.3.md  v2.0.0-rc.4.md  v2.0.0-rc.5.md  v2.0.0-rc.6.md  v2.0.0-rc.7.md  v2.0.0-rc.8.md
docs/security/: MATURITY_GATES.md  POLICY_ENGINE.md  THREAT_MODEL.md  THREAT_MODEL_V1.md
runtime/node/: Dockerfile.agent  Dockerfile.server  package.json
sdk/c/: CMakeLists.txt  README.md
sdk/c/examples/: full.c  version.c
sdk/c/include/: tunnara.h
sdk/c/src/: tunnara.c
services/agent/: Cargo.toml
services/agent/src/: main.rs
services/coordinator/: Cargo.toml
services/coordinator/src/: main.rs
services/edge/: Cargo.toml
services/edge/src/: main.rs
services/quic-bridge/: Cargo.toml  README.md
services/quic-bridge/src/: main.rs
(+357 files in other folders)
