cmake_minimum_required(VERSION 3.16)
project(tunnara_sdk_c VERSION 1.0.1 LANGUAGES C)
add_library(tunnara SHARED src/tunnara.c)
target_include_directories(tunnara PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_definitions(tunnara PRIVATE TUNNARA_BUILD_SHARED)
set_target_properties(tunnara PROPERTIES C_STANDARD 11 C_VISIBILITY_PRESET hidden OUTPUT_NAME tunnara)
if(WIN32)
  target_link_libraries(tunnara PRIVATE ws2_32)
endif()
add_library(tunnara_static STATIC src/tunnara.c)
target_include_directories(tunnara_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
set_target_properties(tunnara_static PROPERTIES C_STANDARD 11 OUTPUT_NAME tunnara)
install(TARGETS tunnara tunnara_static DESTINATION lib)
install(FILES include/tunnara.h DESTINATION include)
add_executable(version-example examples/version.c)
target_link_libraries(version-example PRIVATE tunnara_static)
target_include_directories(version-example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(full-example examples/full.c)
target_link_libraries(full-example PRIVATE tunnara_static)
target_include_directories(full-example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
