[package]
name = "tunnara-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tunnara-config = { path = "../../crates/tunnara-config" }
tunnara-types = { path = "../../crates/tunnara-types" }
