[package]
name = "tunnara-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
tunnara-config = { path = "../../crates/tunnara-config" }
tunnara-protocol = { path = "../../crates/tunnara-protocol" }
tunnara-types = { path = "../../crates/tunnara-types" }
