[package]
name = "tunnara-edge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tunnara-config = { path = "../../crates/tunnara-config" }
