[package]
name = "generic-license-tauri"
version = "1.1.2"
edition = "2021"
license = "Proprietary"
description = "Componente genérico de licenciamento online/offline para aplicações Rust + Tauri."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
thiserror = "2"
directories = "5"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
ed25519-dalek = "2"
tauri = { version = "2", optional = true }

[features]
default = []
tauri-commands = ["dep:tauri"]
